--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -70,52 +70,81 @@
   text-align: center;
 }
 
-.procrastinating {
-  color: red;
-  font-size: 1.5rem;
-}
-
 @media (max-width: 500px) {
   .app {
+    margin: 5vh auto;
     min-height: 90vh;
+    max-height: 90vh;
     min-width: 90vw;
+    max-width: 90vw;
     justify-content: space-evenly;
   }
-}
 
-@media (max-width: 500px) {
   .form-container {
     height: 100px;
   }
-}
 
-@media (max-width: 500px) {
   .form {
     flex-flow: column nowrap;
     width: 90%;
     align-content: center;
   }
-}
-@media (max-width: 500px) {
+
   .add-button {
     padding: 2%;
     margin: 5% auto;
   }
-}
 
-@media (max-width: 500px) {
   .list {
-    /* min-height: 200px; */
-    height: 400px;
+    min-height: 400px;
     padding: 2%;
 
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
   }
+
+  .clear-button {
+    padding: 2%;
+  }
 }
 
-@media (max-width: 500px) {
+@media only screen and (max-width: 640px) and (orientation: landscape) {
+  .app {
+    margin: 5vh auto;
+    min-height: 90vh;
+    max-height: 90vh;
+    min-width: 90vw;
+    max-width: 90vw;
+    justify-content: space-evenly;
+  }
+
+  .form-container {
+    height: 100px;
+  }
+
+  .form {
+    margin-top: 5px;
+    flex-flow: row nowrap;
+    width: 90%;
+    align-content: center;
+  }
+
+  .add-button {
+    padding: 2%;
+    margin: 3vh 0 0 5vw;
+  }
+
+  .list {
+    min-height: 40vh;
+    max-height: 40vh;
+    padding: 2%;
+    overflow: scroll;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+  }
+
   .clear-button {
     padding: 2%;
   }
